--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://dpg-ckbev2kiibqc73d2fkl0-a.ohio-postgres.render.com/interbanking_kz9u
+spring.datasource.url=jdbc:postgresql://dpg-ckbfapsiibqc73d5a1h0-a.oregon-postgres.render.com/interbanking_b080
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
